# Tabajara-Shell

./: .clang-format  .gitignore  CMakeLists.txt  README.md  tsh.c
src/: core.c  core.h  helper.c  helper.h  job.c  job.h  parser.c  parser.h  signal.c  signal.h
test/: CMakeLists.txt  helper_test.c
